--- a/README
+++ b/README
@@ -7,3 +7,5 @@ Copyright (C) 2011 The CyanogenMod Project
  You may obtain a copy of the License at
 
       http://www.apache.org/licenses/LICENSE-2.0
+
+Modified for OMGB
