--- a/README
+++ b/README
@@ -8,4 +8,4 @@ Copyright (C) 2011 The CyanogenMod Project
 
       http://www.apache.org/licenses/LICENSE-2.0
 
-Modified for OMGB
+Modified for TSM Pool Party
